// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EsFormInput <EsFormInput /> 1`] = `
"<div class="input-wrapper justify-content-end polite-mb-50"><label for="myID" class="label font-weight-semibold justify-content-start">Account Number
    <!----></label>
  <!---->
  <div class="input-holder position-relative">
    <!----> <input id="myID" type="text" class="es-form-input w-100 form-control">
    <!---->
    <!---->
    <!---->
  </div>
</div>"
`;

exports[`EsFormInput <EsFormInput <label /> /> 1`] = `
"<div required="required" class="input-wrapper justify-content-end polite-mb-50"><label for="myID" class="label font-weight-semibold justify-content-start"> <span class="text-danger">
            *
        </span></label>
  <!---->
  <div class="input-holder position-relative">
    <!----> <input id="myID" type="text" class="es-form-input w-100 form-control">
    <!---->
    <div class="invalid-feedback">
      This field is required.
    </div>
    <!---->
  </div>
</div>"
`;

exports[`EsFormInput <EsFormInput props /> 1`] = `
"<div class="input-wrapper justify-content-end polite-mb-50"><label for="myID" class="label font-weight-semibold justify-content-start">
    <!----></label>
  <!---->
  <div class="input-holder position-relative">
    <!----> <input id="myID" type="text" class="es-form-input w-100 form-control">
    <!---->
    <!---->
    <!---->
  </div>
</div>"
`;

exports[`EsFormInput <EsFormInput v-model /> 1`] = `
"<div>
  <div class="input-wrapper justify-content-end polite-mb-50"><label for="testId" class="label font-weight-semibold justify-content-start">
      <!----></label>
    <!---->
    <div class="input-holder position-relative">
      <!----> <input id="testId" type="text" class="es-form-input w-100 form-control" data-testid="testInput">
      <!---->
      <!---->
      <!---->
    </div>
  </div>
</div>"
`;

exports[`EsFormInput <EsFormInput>slots</EsFormInput> 1`] = `
"<div class="input-wrapper justify-content-end polite-mb-50"><label for="myID" class="label font-weight-semibold justify-content-start">Account Number
    <!----></label>
  <!---->
  <div class="input-holder position-relative">
    <!----> <input id="myID" type="text" class="es-form-input w-100 form-control"> <small class="form-text text-muted">Please enter your account number.</small>
    <div class="invalid-feedback">Please enter a valid account number.</div>
    <div class="valid-feedback">Your account number has been submitted successfully.</div>
  </div>
</div>"
`;
